--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,11 @@
 *.hdr filter=lfs diff=lfs merge=lfs -text
 *.ogg filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
+*.asset filter=lfs diff=lfs merge=lfs -text
+*.lighting filter=lfs diff=lfs merge=lfs -text
+*.lightingdata.exr filter=lfs diff=lfs merge=lfs -text
+*.lightingdata.asset filter=lfs diff=lfs merge=lfs -text
+*.terraindata filter=lfs diff=lfs merge=lfs -text
 *.unity   merge=unityyamlmerge eol=lf
 *.prefab  merge=unityyamlmerge eol=lf
 *.anim    merge=unityyamlmerge eol=lf
